--- a/views/userSignup.hbs
+++ b/views/userSignup.hbs
@@ -10,6 +10,9 @@
       </div>
       <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
         <form action="/login" method="POST">
+        {{#if loggedErr}}
+          <p class="error" style="color: white;">Invailed Username or Password</p>
+        {{/if}}
           <!-- Email input -->
           <div class="form-outline mb-4">
             <input
