--- a/views/adminpage.hbs
+++ b/views/adminpage.hbs
@@ -7,16 +7,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">View users</a>
-        </li>
-        </li>
+       
+        {{!-- </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#">Update</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Delect</a>
-        </li>
+        </li> --}}
+        
         
       </ul>
    
@@ -28,6 +24,34 @@
     </div>
   </div>
 </nav>
-<body style="color:white;">
+<p class="mt-5 m-3" style="color: white;font-size: 20px;">Users List </p>
+<table class="table table-dark mt-1 m-3">
+  <thead>
+    <tr>
+      <th scope="col">Id</th>
+      <th scope="col">Username</th>
+      <th scope="col">Email-Id</th>
+      <th scope="col"></th>
+      
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td></td>
+      <td>nbv</td>
+      <td>Otto</td>
+      <td><button class="btn btn-primary btn-sm">Edit</button> <button class="btn btn-danger btn-sm">Delete</button></td>
+    </tr>
+    <tr>
+      
+      
+     
+    </tr>
+    <tr>
+      
+     
+    </tr>
+  </tbody>
+</table>
     
 </body>
