--- a/views/addUserAdmin.hbs
+++ b/views/addUserAdmin.hbs
@@ -7,9 +7,14 @@
             <div class="row justify-content-center">
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Add
+                  Users</p>
 
-                <form action="/redirect" method="post" class="mx-1 mx-md-4">
+                <form
+                  action="/admin/addUserAdmin"
+                  method="post"
+                  class="mx-1 mx-md-4"
+                >
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
@@ -19,7 +24,7 @@
                         id="form3Example1c"
                         class="form-control"
                         name="Name"
-                        placeholder="Your Name"
+                        placeholder="Name"
                         required=""
                       />
 
@@ -34,7 +39,7 @@
                         id="form3Example3c"
                         class="form-control"
                         name="Email"
-                        placeholder="Your Email"
+                        placeholder="Email"
                         required=""
                       />
 
@@ -60,8 +65,7 @@
                     <button
                       type="submit"
                       class="btn btn-primary btn-lg"
-                     
-                    >Register</button>
+                    >Add</button>
                   </div>
 
                 </form>
@@ -70,12 +74,6 @@
               <div
                 class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2"
               >
-
-                <img
-                  src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                  class="img-fluid"
-                  alt="Sample image"
-                />
 
               </div>
             </div>
