--- a/views/admin-Editpage.hbs
+++ b/views/admin-Editpage.hbs
@@ -7,9 +7,14 @@
             <div class="row justify-content-center">
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Edit
+                  Users</p>
 
-                <form action="/redirect" method="post" class="mx-1 mx-md-4">
+                <form
+                  action="/admin/edit-user/"
+                  method="post"
+                  class="mx-1 mx-md-4"
+                >
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
@@ -19,11 +24,13 @@
                         id="form3Example1c"
                         class="form-control"
                         name="Name"
-                        placeholder="Your Name"
+                        placeholder="Name"
+                        value="{{details.Name}}"
                         required=""
                       />
 
                     </div>
+                    <input type="text" name="userId" value="{{details._id}}" class="d-none">
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
@@ -34,7 +41,8 @@
                         id="form3Example3c"
                         class="form-control"
                         name="Email"
-                        placeholder="Your Email"
+                        placeholder="Email"
+                        value="{{details.Email}}"
                         required=""
                       />
 
@@ -43,25 +51,14 @@
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                      <input
-                        type="password"
-                        id="form3Example4c"
-                        class="form-control"
-                        name="password"
-                        placeholder="Password"
-                        required=""
-                      />
-
-                    </div>
+                   
                   </div>
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                     <button
                       type="submit"
                       class="btn btn-primary btn-lg"
-                     
-                    >Register</button>
+                    >Add</button>
                   </div>
 
                 </form>
@@ -70,12 +67,6 @@
               <div
                 class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2"
               >
-
-                <img
-                  src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                  class="img-fluid"
-                  alt="Sample image"
-                />
 
               </div>
             </div>
