--- a/views/adminpage.hbs
+++ b/views/adminpage.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#" style="color: white;">Admin Panel</a>
+    <a class="navbar-brand" href="#" style="color: white;margin-right: 57rem;">Admin Panel</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,10 +8,13 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
        
-        {{!-- </li>
+        </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Update</a>
-        </li> --}}
+         <div class="input-group ">
+  <input type="search" class="form-control rounded" placeholder="Find User" aria-label="Search" aria-describedby="search-addon" />
+  <button type="button" class="btn btn-outline-primary ">Search</button>
+</div>
+        </li>
         
         
       </ul>
@@ -24,8 +27,12 @@
     </div>
   </div>
 </nav>
-<p class="mt-5 m-3" style="color: white;font-size: 20px;">Users List </p>
-<table class="table table-dark mt-1 m-3">
+<div class="d-flex">
+<h3 class=" mt-2 ml-2" style="color: white;font-size: 20px;">Users List </h3>
+<a type="button" href="/admin/adduser" class="btn btn-success " style="margin-left: 70rem; ">Add Users</a>
+
+</div>
+<table id="userTable" class="table table-dark mt-1 " >
   <thead>
     <tr>
       <th scope="col">Id</th>
@@ -34,23 +41,17 @@
       <th scope="col"></th>
       
     </tr>
-  </thead>
+  </thead >
   <tbody>
+    {{#each details}}
     <tr>
-      <td></td>
-      <td>nbv</td>
-      <td>Otto</td>
-      <td><button class="btn btn-primary btn-sm">Edit</button> <button class="btn btn-danger btn-sm">Delete</button></td>
+      <td>{{this._id}}</td>
+      <td>{{this.Name}}</td>
+      <td>{{this.Email}}</td>
+      <td><a href="/admin/edit-user/{{this._id}}" class="btn btn-primary btn-sm" >Edit</a>
+       <a href="/admin/delete-user/{{this._id}}" class="btn btn-danger btn-sm" onclick=" return confirm('Are you want to delete{{this.Name}} ?')}">Delete</a></td>
     </tr>
-    <tr>
-      
-      
-     
-    </tr>
-    <tr>
-      
-     
-    </tr>
+   {{/each}}
   </tbody>
 </table>
     
