--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -7,6 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"/>
   <link rel='stylesheet' href='/stylesheets/style.css'/>
+  <link rel="stylesheet" href="//cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
 </head>
 <body>
  
@@ -18,4 +19,10 @@
 {{{body}}}
 </body>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
+<link rel="stylesheet" href="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js">
+<script>
+    $(document).ready( function () {
+    $('#table_id').DataTable();
+} );
+</script>
 </html>
